refactor(order): 优化订单服务并调整产品模型
- 将 Arrays.asList 替换为 List.of，以创建不可变列表
- 移除 Product 类中未使用的 Accessors 注解